--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -57,6 +57,7 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/fornecedor/fornecedor-controller.js}"></script>
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/contabancaria/conta-bancaria-controller.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/contabancaria/popup/selecionar-banco-controller-popup.js}"></script>
 		
 		<!-- maskMoney -->
 		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
