--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/conta-bancaria/conta-bancaria-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/conta-bancaria/conta-bancaria-list.html
@@ -6,11 +6,11 @@
 	
 		<md-toolbar layout="row" style="z-index: 3;">
 	    	<div flex layout="row" class="default-header">
-		        <h1 class="md-toolbar-tools">Fornecedor</h1>
+		        <h1 class="md-toolbar-tools">Conta Bancaria</h1>
 	    	</div>
 	    	
 	        <div md-theme="default" layout="row" layout-align="end center" class="default-header">
-		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go( FORNECEDOR_ADD_STATE )">Novo</md-button>
+		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go( CONTA_BANCARIA_ADD_STATE )">Novo</md-button>
 	        </div>
 	    </md-toolbar>
 	
@@ -20,11 +20,11 @@
 						<div layout="row">
 							<md-input-container style="margin-bottom: 20px;" layout="column" flex>
 								<label>Digite sua pesquisa</label>
-								<input type="text" name="filtro" ng-disabled="moreFilters" ng-model="model.fornecedor.filters.terms" maxlength="255">
+								<input type="text" name="filtro" ng-disabled="moreFilters" ng-model="model.contaBancaria.filters.terms" maxlength="255">
 							</md-input-container>
 					            
 				            <div layout="row" layout-align="end center" ng-init="currentOption = 'down'">
-					            <md-button class="md-raised" ng-click="!moreFilters ? listByFilters() : listFornecedorByMoreFilters()">Filtrar</md-button>
+					            <md-button class="md-raised" ng-click="!moreFilters ? listByFilters() : listCONTA_BANCARIAByMoreFilters()">Filtrar</md-button>
 					            <md-button class="md-raised" ng-click="openMaisOpcoes(); currentOption = !currentOption" style="padding-left: 14px;">
 					            	Mais opções
 					            	<i ng-if="!currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-down"></i>
@@ -35,11 +35,11 @@
 				    	
 				    	<div class="more-filters" layout="column" ng-if="moreFilters">
 							<div layout="row" style="color:black">
-								<md-checkbox ng-model="model.fornecedor.filters.ativo" aria-label="Checkbox 1">
+								<md-checkbox ng-model="model.contaBancaria.filters.ativo" aria-label="Checkbox 1">
 									Mostrar ativos
 						        </md-checkbox>
 					    		
-					    		<md-checkbox ng-model="model.fornecedor.filters.inativo" aria-label="Checkbox 1">
+					    		<md-checkbox ng-model="model.contaBancaria.filters.inativo" aria-label="Checkbox 1">
 									Mostrar inativos
 						        </md-checkbox>
 							</div>				    									
@@ -57,35 +57,33 @@
 					  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
 					    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
 					      <tr md-row>
-					        <th md-column md-order-by="nameToLower"><span>Razao Social</span></th>
-					        <th md-column md-order-by="nameToLower"><span>Cnpj</span></th>
-					        <th md-column md-order-by="nameToLower"><span>Telefone</span></th>
-					        <th md-column md-order-by="nameToLower"><span>Responsavel</span></th>
+					        <th md-column md-order-by="nameToLower"><span>Número</span></th>
+					        <th md-column md-order-by="nameToLower"><span>Agência</span></th>
+					        <th md-column md-order-by="nameToLower"><span>Banco</span></th>
 					      </tr>
 					    </thead>
 					    <tbody md-body>
-					      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="$state.go( FORNECEDOR_EDIT_STATE, {id:fornecedor.id} )" md-select-id="name" md-auto-select ng-repeat="fornecedor in model.fornecedor.page.content">
-					        <td md-cell >{{::fornecedor.razaoSocial}}</td>
-					        <td md-cell >{{::fornecedor.cnpj}}</td>
-					        <td md-cell >{{::fornecedor.telefone}}</td>
-					        <td md-cell >{{::fornecedor.responsavel.nome}}</td>
+					      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="$state.go( CONTA_BANCARIA_EDIT_STATE, {id:contaBancaria.id} )" md-select-id="name" md-auto-select ng-repeat="contaBancaria in model.contaBancaria.page.content">
+					        <td md-cell >{{::contaBancaria.numero}}</td>
+					        <td md-cell >{{::contaBancaria.agencia}}</td>
+					        <td md-cell >{{::contaBancaria.banco.nome}}</td>
 					      </tr>
 					    </tbody>
 					  </table>
 					</md-table-container>
 										
-					<div layout="column" flex class="empty-grid" layout-align="center center" ng-show="model.fornecedor.page.content.length == 0">
-						Nenhum registro de fornecedor encontrado
+					<div layout="column" flex class="empty-grid" layout-align="center center" ng-show="model.contaBancaria.page.content.length == 0">
+						Nenhum registro de conta bancaria encontrado
 					</div>
 					
 					<md-divider></md-divider>
-					<div class="default-paginator" layout layout-align="end center" ng-if="model.fornecedor.page.content.length > 0">
-						{{ model.fornecedor.page.pageable.page + 1 }} de {{ totalPagesFornecedor }}
-						<md-button class="md-icon-button" ng-disabled="(model.fornecedor.page.pageable.page + 1) < 2" ng-click="onFornecedorPaginationChange(false)">
-							<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.fornecedor.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
+					<div class="default-paginator" layout layout-align="end center" ng-if="model.contaBancaria.page.content.length > 0">
+						{{ model.contaBancaria.page.pageable.page + 1 }} de {{ totalPagesCONTA_BANCARIA }}
+						<md-button class="md-icon-button" ng-disabled="(model.contaBancaria.page.pageable.page + 1) < 2" ng-click="onContaBancariaPaginationChange(false)">
+							<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.contaBancaria.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
 						</md-button>
-						<md-button class="md-icon-button" ng-disabled="(model.fornecedor.page.pageable.page + 1) >= totalPagesFornecedor" ng-click="onFornecedorPaginationChange(true)">
-							<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.fornecedor.page.pageable.page + 1) >= Math.ceil(model.fornecedor.page.total/model.fornecedor.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
+						<md-button class="md-icon-button" ng-disabled="(model.contaBancaria.page.pageable.page + 1) >= totalPagesCONTA_BANCARIA" ng-click="onContaBancariaPaginationChange(true)">
+							<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.contaBancaria.page.pageable.page + 1) >= Math.ceil(model.contaBancaria.page.total/model.contaBancaria.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
 						</md-button>
 			  		</div>
 			  		
