Terminando front end basico de inserção de movimentação

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -59,6 +59,7 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/conta/conta-controller.js}"></script>
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/movimentacao/movimentacao-controller.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/movimentacao/popup/selecionar-conta-controller-popup.js}"></script>
 		
 		<!-- maskMoney -->
 		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
