--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-list.html
@@ -68,7 +68,7 @@
 					        <td md-cell >{{::movimentacao.descricao}}</td>
 					        <td md-cell >{{::movimentacao.contaOrigem.nome}}</td>
 					        <td md-cell >{{::movimentacao.contaDestino.nome}}</td>
-					        <td md-cell >{{::movimentacao.status}}</td>
+					        <td md-cell >{{::movimentacao.status | translate}}</td>
 					      </tr>
 					    </tbody>
 					  </table>
