--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
@@ -81,7 +81,7 @@
 											<div layout="row">
 												<md-input-container layout="column" flex="30" >
 										    		<label>Valor</label>
-									                <input type="number" name="valor" required ng-model="model.movimentacao.entity.valor">
+									                <input type="number" name="valor" required ng-model="model.movimentacao.entity.valorEmissao">
 									
 									                <div ng-messages="model.movimentacao.form.valor.$error">
 									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
