Form de aquisição de produtos parcialmente

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/aquisicaoproduto/aquisicao-produto-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/aquisicaoproduto/aquisicao-produto-list.html
@@ -68,7 +68,7 @@
 					        <td md-cell >{{::aquisicaoProduto.id}}</td>
 					        <td md-cell >{{::aquisicaoProduto.fornecedor.razaoSocial}}</td>
 					        <td md-cell >{{::aquisicaoProduto.condicaoPagamento | translate}}</td>
-					        <td md-cell >{{::movimentacao.status | translate}}</td>
+					        <td md-cell >{{::aquisicaoProduto.status | translate}}</td>
 					      </tr>
 					    </tbody>
 					  </table>
