--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -50,6 +50,7 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-categoria-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-marca-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-modelo-controller-popup.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-produto-controller-popup.js}"></script>
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/avaliacaoindividual/popup/selecionar-crianca-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/avaliacaoindividual/avaliacao-individual-controller.js}"></script>
@@ -62,6 +63,7 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/movimentacao/popup/selecionar-conta-controller-popup.js}"></script>
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/aquisicaoproduto/aquisicao-produto-controller.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/aquisicaoproduto/popup/selecionar-fornecedor-controller-popup.js}"></script>
 		
 		<!-- maskMoney -->
 		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
