--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/aquisicaoproduto/aquisicao-produto-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/aquisicaoproduto/aquisicao-produto-form.html
@@ -6,161 +6,129 @@
 	
 		<md-toolbar layout="row" style="z-index: 3;">
 	    	<div flex layout="row" class="default-header">
-		        <h1 class="md-toolbar-tools">Movimentação</h1>
+		        <h1 class="md-toolbar-tools">Aquisição de Produto</h1>
 	    	</div>
 	    	
 	    	<div md-theme="default" layout="row" layout-align="end center" class="default-header">
-		        <md-button class="md-raised" ng-click="$state.go(MOVIMENTACAO_LIST_STATE)">Voltar</md-button>
+		        <md-button class="md-raised" ng-click="$state.go(AQUISICAO_PRODUTO_LIST_STATE)">Voltar</md-button>
 	        </div>
 	        
-	        <div ng-if="model.movimentacao.entity.id && model.movimentacao.entity.status == 'RASCUNHO'" md-theme="default" layout="row" layout-align="end center" class="default-header">
+	        <div ng-if="model.aquisicaoProduto.entity.id && model.aquisicaoProduto.entity.status == 'RASCUNHO'" md-theme="default" layout="row" layout-align="end center" class="default-header">
 		        <md-button class="md-raised md-accent default-save-button" ng-click="changeToRemove()">Excluir</md-button>
 	        </div>
 	        
-	        <div ng-if="model.movimentacao.entity.id && model.movimentacao.entity.status == 'RASCUNHO'" md-theme="default" layout="row" layout-align="end center" class="default-header">
+	        <div ng-if="model.aquisicaoProduto.entity.id && model.aquisicaoProduto.entity.status == 'RASCUNHO'" md-theme="default" layout="row" layout-align="end center" class="default-header">
 		        <md-button class="md-raised md-accent default-save-button" ng-click="changeToEmAberto()">Enviar para em aberto</md-button>
 	        </div>
 	        
-	        <div ng-if="model.movimentacao.entity.id && model.movimentacao.entity.status == 'ABERTO'" md-theme="default" layout="row" layout-align="end center" class="default-header">
+	        <div ng-if="model.aquisicaoProduto.entity.id && model.aquisicaoProduto.entity.status == 'ABERTO'" md-theme="default" layout="row" layout-align="end center" class="default-header">
 		        <md-button class="md-raised md-accent default-save-button" ng-click="changeToConcluido()">Concluir</md-button>
 	        </div>
 	        
-	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.movimentacao.entity.status != 'CONCLUIDO'" class="default-header md-primary md-hue-3">
-		        <md-button class="md-raised md-accent default-save-button" ng-click=" model.movimentacao.entity.id ? updateMovimentacao() : insertMovimentacao()">Salvar</md-button>
+	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.aquisicaoProduto.entity.status != 'CONCLUIDO'" class="default-header md-primary md-hue-3">
+		        <md-button class="md-raised md-accent default-save-button" ng-click=" model.aquisicaoProduto.entity.id ? updateMovimentacao() : insertMovimentacao()">Salvar</md-button>
 	        </div>
 	        
 	    </md-toolbar>
 		
 			<md-content layout="column" flex >
 				<md-tabs  md-border-bottom flex >
-					<md-tab label="Movimentacao" >
+					<md-tab label="Aquisição de Produtos" >
 						
 								<div style="height:100%" class="default-frame" layout="column">
 									<md-toolbar layout style="height:100%" class="md-hue-1">
-										<form novalidate name="model.movimentacao.form" class="default-form" flex>
-											
-											<div layout="row">
-												<md-input-container layout="column" flex="30" >
-										    		<label>Valor Efetivado</label>
-									                <input type="number" disabled name="valorEfetivado" required ng-model="model.movimentacao.entity.valorEfetivado">
-									
-									                <div ng-messages="model.movimentacao.form.valor.$error">
-									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-												
-									            <md-input-container layout="column" flex="30" style="margin-left:30px">
-										    		<label>Porcentagem da diferença</label>
-									                <input type="number" ng-disabled="model.movimentacao.entity.id && model.movimentacao.entity.status != 'RASCUNHO'"" name="porcentagemDiferenca" ng-model="model.movimentacao.entity.porcentagemDiferenca">
-									
-									                <div ng-messages="model.movimentacao.form.porcentagemDiferenca.$error">
-									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-									        </div>
+										<form novalidate name="model.aquisicaoProduto.form" class="default-form" flex>
 											
 											<div layout="row">
 												
 												<md-input-container layout="column" flex="30" style="margin-right:30px">
-											        <label>Tipo de movimentação</label>
-											        <md-select name="tipo" ng-disabled="model.movimentacao.entity.id && model.movimentacao.entity.status != 'RASCUNHO'" required ng-model="model.movimentacao.entity.tipoMovimentacao">
-											          <md-option ng-repeat="tipoMovimentacao in allTiposMovimentacao" value="{{tipoMovimentacao}}">{{::tipoMovimentacao | translate}}</md-option>
+											        <label>Forma de pagamento</label>
+											        <md-select name="tipo" ng-disabled="model.aquisicaoProduto.entity.id && model.aquisicaoProduto.entity.status != 'RASCUNHO'" required ng-model="model.aquisicaoProduto.entity.formaPagamento">
+											          <md-option ng-repeat="formaPagamento in allFormasPagamento" value="{{formaPagamento}}">{{::formaPagamento | translate}}</md-option>
 											        </md-select>
 											        
-											        <div ng-messages="model.movimentacao.form.tipo.$error">
-									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
+											        <div ng-messages="model.aquisicaoProduto.form.formaPagamento.$error">
+									                	<div ng-message="required" ng-if="model.aquisicaoProduto.form.$submitted">Campo obrigatório</div>
 									                </div>
 											    </md-input-container>
 											    
-											    <md-input-container layout="column" flex >
-										    		<label>Data de pagamento</label>
-									                <md-datepicker name="dataPagamento" ng-disabled="model.movimentacao.entity.id && model.movimentacao.entity.status != 'RASCUNHO'"" flex ng-model="model.movimentacao.entity.dataPagamento" 
-									                				style="width:200px" md-placeholder="Data de pagamento"></md-datepicker>
-									
-									                <div ng-messages="model.movimentacao.form.dataPagamento.$error">
-									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
+											    <md-input-container layout="column" flex="30" style="margin-right:30px">
+											        <label>Condição de pagamento</label>
+											        <md-select name="tipo" ng-disabled="model.aquisicaoProduto.entity.id && model.aquisicaoProduto.entity.status != 'RASCUNHO'" required ng-model="model.aquisicaoProduto.entity.condicaoPagamento">
+											          <md-option ng-repeat="condicaoPagamento in allCondicoesPagamento" value="{{condicaoPagamento}}">{{::condicaoPagamento | translate}}</md-option>
+											        </md-select>
+											        
+											        <div ng-messages="model.aquisicaoProduto.form.condicaoPagamento.$error">
+									                	<div ng-message="required" ng-if="model.aquisicaoProduto.form.$submitted">Campo obrigatório</div>
 									                </div>
-									            </md-input-container>
+											    </md-input-container>
 											    
 											</div>
 											
-											<md-input-container layout="column" flex="30">
-									    		<label>Natureza dos gastos</label>
-								                <input type="text" name="naturezaGastos" ng-disabled="model.movimentacao.entity.id && model.movimentacao.entity.status != 'RASCUNHO'"" required ng-model="model.movimentacao.entity.naturezaGastos.nome">
-								
-								                <div ng-messages="model.movimentacao.form.naturezaGastos.$error">
-								                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
-								                </div>
-								            </md-input-container>
-											
-											<md-input-container layout="column" >
-									    		<label>Descrição</label>
-								                <input type="text"ng-disabled="model.movimentacao.entity.id && model.movimentacao.entity.status != 'RASCUNHO'""  name="descricao" required ng-model="model.movimentacao.entity.descricao">
-								
-								                <div ng-messages="model.movimentacao.form.descricao.$error">
-								                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
-								                </div>
-								            </md-input-container>
-											
-											<div layout="row">
-												<md-input-container layout="column" flex="30" >
-										    		<label>Valor</label>
-									                <input type="number" ng-disabled="model.movimentacao.entity.id && model.movimentacao.entity.status != 'RASCUNHO'"" name="valor" required ng-model="model.movimentacao.entity.valorEmissao">
-									
-									                <div ng-messages="model.movimentacao.form.valor.$error">
-									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-												
-									            <md-input-container layout="column" flex="30" style="margin-left:30px">
-										    		<label>Porcentagem da diferença</label>
-									                <input type="number" ng-disabled="model.movimentacao.entity.id && model.movimentacao.entity.status != 'RASCUNHO'"" name="porcentagemDiferenca" ng-model="model.movimentacao.entity.porcentagemDiferenca">
-									
-									                <div ng-messages="model.movimentacao.form.porcentagemDiferenca.$error">
-									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-									        </div>
-								            
 								            <div layout="row">
 									            <md-input-container layout="column" flex="30" >
-										    		<label>Conta de origem</label>
-									                <input type="text" name="contaOrigem" disabled required ng-model="model.movimentacao.entity.contaOrigem.nome">
+										    		<label>Fornecedor</label>
+									                <input type="text" name="fornecedor" disabled required ng-model="model.aquisicaoProduto.entity.fornecedor.razaoSocial">
 									
-									                <div ng-messages="model.movimentacao.form.contaOrigem.$error">
-									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
+									                <div ng-messages="model.aquisicaoProduto.form.fornecedor.$error">
+									                	<div ng-message="required" ng-if="model.aquisicaoProduto.form.$submitted">Campo obrigatório</div>
 									                </div>
 									            </md-input-container>
 									            
-									            <md-input-container layout="column" flex="10">
-										    		<label>Saldo</label>
-										    		<input type="text" name="saldoOrigem" disabled required ng-model="model.movimentacao.entity.contaOrigem.saldo">
-									            </md-input-container>
-									            
-									            <div md-theme="default" layout="column" ng-if="model.movimentacao.entity.status != 'CONCLUIDO'" style="margin-top:35px" class="default-header md-primary md-hue-3">
-											        <md-button class="md-raised" ng-click="openSelecionarConta(true)">Selecionar conta</md-button>
+									            <div md-theme="default" layout="column" ng-if="model.aquisicaoProduto.entity.status == 'RASCUNHO'" style="margin-top:35px" class="default-header md-primary md-hue-3">
+											        <md-button class="md-raised" ng-click="openSelecionarFornecedor(false)">Selecionar fornecedor</md-button>
 										        </div>
-									            
 								            </div>
 								            
-								            <div layout="row">
-									            <md-input-container layout="column" flex="30" >
-										    		<label>Conta destino</label>
-									                <input type="text" name="contaDestino" disabled required ng-model="model.movimentacao.entity.contaDestino.nome">
-									
-									                <div ng-messages="model.movimentacao.form.contaDestino.$error">
-									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
-									                </div>
-									            </md-input-container>
-									            
-									            <md-input-container layout="column" flex="10">
-										    		<label>Saldo</label>
-										    		<input type="text" name="saldoDestino" disabled required ng-model="model.movimentacao.entity.contaDestino.saldo">
-									            </md-input-container>
-									            
-									            <div md-theme="default" layout="column" ng-if="model.movimentacao.entity.status != 'CONCLUIDO'" style="margin-top:35px" class="default-header md-primary md-hue-3">
-											        <md-button class="md-raised" ng-click="openSelecionarConta(false)">Selecionar conta</md-button>
-										        </div>
+								            <div id="selectProdutos">
+								            	
+								            	<div layout="row">
+									            	<div class="default-info" layout="column" flex> 
+														<span>Produtos</span>
+													</div>
+													
+													<div md-theme="default" layout="column" ng-if="model.aquisicaoProduto.entity.status == 'RASCUNHO'" class="default-header md-primary md-hue-3">
+												        <md-button class="md-raised" ng-click="openSelecionarProduto(false)">Selecionar produto</md-button>
+											        </div>
+												</div>
+												
+												<md-table-container>
+												  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
+												    <thead md-head md-order="query.order">
+												      <tr md-row>
+												        <th md-column md-order-by="">Nome</th>
+												        <th md-column md-order-by="">Categoria</th>
+												        <th md-column md-order-by="">Quantidade</th>
+												        <th md-column md-order-by="">Valor</th>
+												      </tr>
+												    </thead>
+												    
+												    <tbody md-body>
+												      <tr md-row style="cursor:pointer" ng-repeat="produtoAdquirido in model.produtoAdquirido.page.content">
+												        <td md-cell>{{::produtoAdquirido.produto.nome}}</td>
+												        <td md-cell>{{::produtoAdquirido.produto.categoria.nome}}</td>
+												        <td md-cell>{{::produtoAdquirido.quantidade}}</td>
+												        <td md-cell>{{::produtoAdquirido.valor}}</td>
+												      </tr>
+												    </tbody>
+												  </table>
+												</md-table-container>
+										        
+										        <div layout="column" flex class="empty-grid" layout-align="center center" ng-if="model.produtoAdquirido.page.content == 0">
+													Não há nenhum produto selecionado . 
+												</div>
+												
+												<md-divider></md-divider>
+												<div class="default-paginator" layout layout-align="end center" ng-if="model.integranteFamiliar.page.content.length > 0">
+													{{ model.integranteFamiliar.page.pageable.page + 1 }} de {{ totalPagesIntegrante }}
+													<md-button class="md-icon-button" ng-disabled="(model.integranteFamiliar.page.pageable.page + 1) < 2" ng-click="onIntegrantePaginationChange(false)">
+														<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.integranteFamiliar.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
+													</md-button>
+													<md-button class="md-icon-button" ng-disabled="(model.integranteFamiliar.page.pageable.page + 1) >= totalPagesIntegrante" ng-click="onIntegrantePaginationChange(true)">
+														<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.integranteFamiliar.page.pageable.page + 1) >= Math.ceil(model.integranteFamiliar.page.total/model.familia.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
+													</md-button>
+										  		</div>
+								            	
 								            </div>
 								            
 										</form>
