--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/produto/produto-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/produto/produto-list.html
@@ -54,6 +54,7 @@
 				      <tr md-row>
 				        <th md-column md-order-by="">Nome</th>
 				        <th md-column md-order-by="">Categoria</th>
+				        <th md-column md-order-by="">Quantidade em estoque</th>
 				      </tr>
 				    </thead>
 				    
@@ -61,6 +62,7 @@
 				      <tr md-row style="cursor:pointer" ng-click="$state.go( PRODUTO_EDIT_STATE, {id:produto.id} )" ng-repeat="produto in model.produto.page.content">
 				        <td md-cell>{{::produto.nome}}</td>
 				        <td md-cell>{{::produto.categoria.nome}}</td>
+				        <td md-cell>{{::produto.quantidade}}</td>
 				      </tr>
 				    </tbody>
 				  </table>
