Some say water has a taste or smell

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
@@ -134,7 +134,7 @@
 									            
 									            <md-input-container layout="column" flex="10">
 										    		<label>Saldo</label>
-										    		<input type="text" name="saldoOrigem" disabled required ng-model="model.movimentacao.entity.contaOrigem.saldo">
+										    		<input type="text" name="saldoOrigem" disabled ng-model="model.movimentacao.entity.contaOrigem.saldo">
 									            </md-input-container>
 									            
 									            <div md-theme="default" layout="column" ng-if="model.movimentacao.entity.status != 'CONCLUIDO'" style="margin-top:35px" class="default-header md-primary md-hue-3">
@@ -155,7 +155,7 @@
 									            
 									            <md-input-container layout="column" flex="10">
 										    		<label>Saldo</label>
-										    		<input type="text" name="saldoDestino" disabled required ng-model="model.movimentacao.entity.contaDestino.saldo">
+										    		<input type="text" name="saldoDestino" disabled ng-model="model.movimentacao.entity.contaDestino.saldo">
 									            </md-input-container>
 									            
 									            <div md-theme="default" layout="column" ng-if="model.movimentacao.entity.status != 'CONCLUIDO'" style="margin-top:35px" class="default-header md-primary md-hue-3">
