--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/aquisicaoproduto/aquisicao-produto-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/aquisicaoproduto/aquisicao-produto-form.html
@@ -18,15 +18,11 @@
 	        </div>
 	        
 	        <div ng-if="model.aquisicaoProduto.entity.id && model.aquisicaoProduto.entity.status == 'RASCUNHO'" md-theme="default" layout="row" layout-align="end center" class="default-header">
-		        <md-button class="md-raised md-accent default-save-button" ng-click="changeToEmAberto()">Enviar para em aberto</md-button>
-	        </div>
-	        
-	        <div ng-if="model.aquisicaoProduto.entity.id && model.aquisicaoProduto.entity.status == 'ABERTO'" md-theme="default" layout="row" layout-align="end center" class="default-header">
 		        <md-button class="md-raised md-accent default-save-button" ng-click="changeToConcluido()">Concluir</md-button>
 	        </div>
 	        
 	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.aquisicaoProduto.entity.status != 'CONCLUIDO'" class="default-header md-primary md-hue-3">
-		        <md-button class="md-raised md-accent default-save-button" ng-click=" model.aquisicaoProduto.entity.id ? updateMovimentacao() : insertMovimentacao()">Salvar</md-button>
+		        <md-button class="md-raised md-accent default-save-button" ng-click="insertAquisicaoProduto()">Salvar</md-button>
 	        </div>
 	        
 	    </md-toolbar>
@@ -75,19 +71,19 @@
 									                </div>
 									            </md-input-container>
 									            
-									            <div md-theme="default" layout="column" ng-if="model.aquisicaoProduto.entity.status == 'RASCUNHO'" style="margin-top:35px" class="default-header md-primary md-hue-3">
+									            <div md-theme="default" layout="column" ng-if="!model.aquisicaoProduto.entity.id || model.aquisicaoProduto.entity.status == 'RASCUNHO'" style="margin-top:35px" class="default-header md-primary md-hue-3">
 											        <md-button class="md-raised" ng-click="openSelecionarFornecedor(false)">Selecionar fornecedor</md-button>
 										        </div>
 								            </div>
 								            
-								            <div id="selectProdutos">
+								            <div ng-if="model.aquisicaoProduto.entity.id" id="selectProdutos">
 								            	
 								            	<div layout="row">
 									            	<div class="default-info" layout="column" flex> 
 														<span>Produtos</span>
 													</div>
 													
-													<div md-theme="default" layout="column" ng-if="model.aquisicaoProduto.entity.status == 'RASCUNHO'" class="default-header md-primary md-hue-3">
+													<div md-theme="default" layout="column" ng-if="!model.aquisicaoProduto.entity.id || model.aquisicaoProduto.entity.status == 'RASCUNHO'" class="default-header md-primary md-hue-3">
 												        <md-button class="md-raised" ng-click="openSelecionarProduto(false)">Selecionar produto</md-button>
 											        </div>
 												</div>
@@ -109,6 +105,7 @@
 												        <td md-cell>{{::produtoAdquirido.produto.categoria.nome}}</td>
 												        <td md-cell>{{::produtoAdquirido.quantidade}}</td>
 												        <td md-cell>{{::produtoAdquirido.valor}}</td>
+												        <td md-cell><i class="zmdi zmdi-delete" ng-if="model.aquisicaoProduto.entity.status == 'RASCUNHO'" style="font-size: 20px;" ng-click="removeProdutoAdquirido(produtoAdquirido.id)" ></i></td>
 												      </tr>
 												    </tbody>
 												  </table>
