Finalizando front end repasse de produtos

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -40,6 +40,7 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/user/user-controller.js}"></script>
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/casalar/casa-lar-controller.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/casalar/popup/selecionar-casa-lar-controller-popup.js}"></script>
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/redeapoio/popup/selecionar-rede-apoio-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/redeapoio/rede-apoio-controller.js}"></script>
@@ -51,6 +52,7 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-marca-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-modelo-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-produto-controller-popup.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-produto-repassado-controller-popup.js}"></script>
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/avaliacaoindividual/popup/selecionar-crianca-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/avaliacaoindividual/avaliacao-individual-controller.js}"></script>
@@ -64,6 +66,8 @@
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/aquisicaoproduto/aquisicao-produto-controller.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/aquisicaoproduto/popup/selecionar-fornecedor-controller-popup.js}"></script>
+		
+		<script type="text/javascript" th:src="@{/modules/home/controllers/repasse/repasse-controller.js}"></script>
 		
 		<!-- maskMoney -->
 		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
