--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
@@ -42,7 +42,7 @@
 											<div layout="row">
 												<md-input-container layout="column" flex="30" >
 										    		<label>Valor Efetivado</label>
-									                <input type="number" disabled name="valorEfetivado" required ng-model="model.movimentacao.entity.valorEfetivado">
+									                <input type="number" disabled name="valorEfetivado" ng-model="model.movimentacao.entity.valorEfetivado">
 									
 									                <div ng-messages="model.movimentacao.form.valor.$error">
 									                	<div ng-message="required" ng-if="model.movimentacao.form.$submitted">Campo obrigatório</div>
