--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/aquisicaoproduto/aquisicao-produto-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/aquisicaoproduto/aquisicao-produto-form.html
@@ -61,6 +61,37 @@
 											    
 											</div>
 											
+											<div layout="row" ng-if="model.aquisicaoProduto.entity.condicaoPagamento == 'A_PRAZO'">
+											
+												<md-input-container layout="column" flex="30" >
+										    		<label>Vezes de pagamento</label>
+									                <input type="number" name="vezesPagamento" ng-disabled="model.aquisicaoProduto.entity.id && model.aquisicaoProduto.entity.status != 'RASCUNHO'" required ng-model="model.aquisicaoProduto.entity.vezesPagamento">
+									
+									                <div ng-messages="model.aquisicaoProduto.form.vezesPagamento.$error">
+									                	<div ng-message="required" ng-if="model.aquisicaoProduto.form.$submitted">Campo obrigatório</div>
+									                </div>
+									            </md-input-container>
+											
+												<md-input-container layout="column" flex="30" style="margin-left:30px">
+										    		<label>Dia de vencimento</label>
+									                <input type="number" name="diaVencimento" ng-disabled="model.aquisicaoProduto.entity.id && model.aquisicaoProduto.entity.status != 'RASCUNHO'" required ng-model="model.aquisicaoProduto.entity.diaVencimento">
+									
+									                <div ng-messages="model.aquisicaoProduto.form.diaVencimento.$error">
+									                	<div ng-message="required" ng-if="model.aquisicaoProduto.form.$submitted">Campo obrigatório</div>
+									                </div>
+									            </md-input-container>
+												
+												<md-input-container layout="column" flex="30" style="margin-left:30px">
+										    		<label>Porcentagem da diferença</label>
+									                <input type="number" name="porcentagemDiferenca" ng-disabled="model.aquisicaoProduto.entity.id && model.aquisicaoProduto.entity.status != 'RASCUNHO'" required ng-model="model.aquisicaoProduto.entity.porcentagemDiferenca">
+									
+									                <div ng-messages="model.aquisicaoProduto.form.porcentagemDiferenca.$error">
+									                	<div ng-message="required" ng-if="model.aquisicaoProduto.form.$submitted">Campo obrigatório</div>
+									                </div>
+									            </md-input-container>
+																			    
+											</div>
+											
 								            <div layout="row">
 									            <md-input-container layout="column" flex="30" >
 										    		<label>Fornecedor</label>
