--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -47,6 +47,9 @@
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/questionario/questionario-controller.js}"></script>
 		
+		<script type="text/javascript" th:src="@{/modules/home/controllers/questionario-resposta/questionario-resposta-controller.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/questionario-resposta/popup/selecionar-questionario-controller-popup.js}"></script>
+		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/produto-controller.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-categoria-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-marca-controller-popup.js}"></script>
